[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
known_first_party = "serpentarium"
line_length = 100
skip_glob="**/__init__.py"
### for compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s.%(funcName)s.%(lineno)d: %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-v --capture=sys tests"

[tool.vulture]
paths = ["serpentarium"]

[tool.poetry]
name = "serpentarium"
version = "0.6.0"
description = "A Python framework for running plugins with conflicting dependencies"
authors = ["Mike Salvatore <mike.s.salvatore@gmail.com>"]
license = "GPLv3"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
repository = "https://github.com/guardicode/serpentarium"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.10.1"
mypy = "^0.991"
pudb = "^2022.1.3"
pynvim = "^0.4.3"
bandit = "^1.7.4"
vulture = "^2.6"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
